<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/back"
    >

  <TableRow


      android:id="@+id/row1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="5dp">


      <TextView
          android:id="@+id/tv1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/nom"/>
      <EditText
          android:id="@+id/et1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:hint="@string/nom"/>

  </TableRow>
    <TableRow


        android:id="@+id/row2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">


        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prenom"/>
        <EditText
            android:id="@+id/et2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prenom"/>

    </TableRow>
    <TableRow


        android:id="@+id/row3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">


        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age"/>
        <EditText
            android:id="@+id/et3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/age"
            android:background="@color/colorAccent"
            />

    </TableRow>
    <TableRow


        android:id="@+id/row4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">


        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Domaine"/>
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            />

    </TableRow>

    <TableRow


        android:id="@+id/row5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">


        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone"/>
        <EditText
            android:id="@+id/Ed4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
           android:inputType="phone"

            />

    </TableRow>

    <TableRow


        android:id="@+id/row6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center">


        <Button
            android:id="@+id/validation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/valider"/>

    </TableRow>

</TableLayout>